changed loader color

--- a/covid-reporting-tool/style.css
+++ b/covid-reporting-tool/style.css
@@ -104,7 +104,7 @@ input[type=checkbox] {
     z-index: 1;
     border: 16px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid #3498db;
+    border-top: 16px solid teal;
     width: 120px;
     height: 120px;
     -webkit-animation: spin 2s linear infinite;
